--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>Friend Finder</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -20,7 +18,7 @@
             Then find the friend with the greatest compatibility!</h2>
         <br>
         <div class="text-center">
-            <a href="survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Go to Survey</button></a>
+            <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Go to Survey</button></a>
         </div>
 
     </div>
